--- a/index.html
+++ b/index.html
@@ -270,19 +270,19 @@ I am Student.
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>........</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>pratikrkate@gmail.com</p>
+                <p>cscssingh123@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 85308 99088</p>
+                <p>+91 9325914146</p>
               </div>
 
             </div>
