--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ I am Student.
             <img src="assets/img/new1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Student &amp; App Developer.</h3>
+            <h3>Student &amp; Web Developer.</h3>
             <p class="font-italic">
               All Information of me
             </p>
